# mcp-app-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  a2as.yaml  build-all.mts  create_new_app.sh  package.json  playwright.config.ts  pnpm-lock.yaml  setup.sh  tsconfig.node.json  vite.config.mts  vitest.config.ts
.github/workflows/: ci.yml
docs/: 15-lessons-building-chatgpt-apps.md  README.md  mcp-apps-docs.md  mcp-apps-specs.mdx  mcp-development-guidelines.md  openai_apps_sdk_docs.md  what-makes-a-great-chatgpt-app.md  widget-development.md
scripts/: build-if-needed.mts  ui-test.ts
server/: agent_runner.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulator_config.json
server/tests/: conftest.py  test_agentic_ux_patterns.py  test_chatgpt_app_guidelines.py  test_csp_external_urls.py  test_input_validation.py  test_mcp_apps_compliance.py  test_mcp_best_practices.py  test_mcp_endpoints.py  test_openai_compliance.py  test_output_quality.py  test_tool_handlers.py  test_widget_loading.py
server/widgets/: __init__.py  _base.py  boilerplate.py  carousel.py  dashboard.py  gallery.py  list.py  map.py  qr.py  scenario_modeler.py  shop.py  solar_system.py  system_monitor.py  todo.py
src/: types.ts  use-display-mode.ts  use-host-global.ts  use-max-height.ts  use-mcp-app.ts  use-openai-global.ts  use-theme.ts  use-widget-props.ts  use-widget-state.ts
tests/: build-output.test.ts  hooks.test.tsx  mcp-app-types.test.ts  mcp-apps-environment.test.ts  openai-types.test.ts  setup.ts  widget-structure.test.ts
(+48 files in other folders)
