[project]
name = "chatgpt-app-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.6.5",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]
