[project]
name = "mcp-app-server"
version = "0.1.0"
description = "MCP server for MCP App widgets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.6.0",
    "openai>=1.0.0",
    "openai-agents>=0.6.5",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "qrcode[pil]>=8.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
py-modules = ["main", "agent_runner"]
